# MatrixVectorKokkos

./: .clang-format  CMakeLists.txt  Report.md  matvec.cpp  matvec.hxx  matvec_kk.cpp  x.csv
config/: spack.yaml  spack_without_cublas.yaml
data/: A.csv  x.csv
